                    Changed the car->engine.fuelcons to value 0
        racing/standardgame
            raceresults.cpp
                removed WebServer functionalities
            raceinit.cpp
                changed reLoadSingleCar() to fix isHuman flag
                changed ReInitCars() to fix isHuman flag
                changed ReCleanup() to also shut down updaters
                removed WebServer functionalities
            racesituation.cpp
                change deltaTime to be constant value
                removed WebServer functionalities
            racestate.cpp
                changed several RE_STATE_RACE_COOLDOWN modes to RE_STATE_RACE_END modes
            racemain.cpp
                removed enabling of cooldown and changed it to enabling of race ending
            racetrack.cpp
                changed ReTrackInit() to load track from Mediator
            CMakeLists.txt
                added rppUtils and Filesystem for Linux
        racing/genparoptv1
            CMakeLists.txt
                added rppUtils and Filesystem for Linux
        track/trackv1/
            track4.cpp 
                changed CreateSegRing() added speed limit
            track.h
                changed tTrackSeg added speed limit

        sound/snddefault/
            CMakeLists.txt
                added frontend
                added backend
                added rppUtils and Filesystem for Linux
            grsound.cpp
                added intervention sound initialization
                added intervention sound volume setting
            OpenalSound.cpp
                changed start(): track when the sound was started
                changed resume(): added check if sound is actually paused
                changed pause(): added check if sound is playing
                changed update(): added check for playing state
            OpenalSoundInterface.h
                added UpdateInterventionSounds()
            OpenalSoundInterface.cpp